making code match the text
Added randomized to main.lua

--- a/build.settings
+++ b/build.settings
@@ -2,6 +2,9 @@ settings =
 {
 	orientation =
 	{
+		-- Supported values for orientation:
+        -- portrait, portraitUpsideDown, landscapeLeft, landscapeRight
+        
 		default ="portrait",
 		supported = {"portrait"},
 	},
